Shop overlap fix

--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -6,6 +6,7 @@
 	padding: 0;
 	margin: 0;
 	text-align: center;
+	clear: both;
 
 	li {
 		display: inline-block;
